@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 
 package com.powsybl.cgmes.conversion;
@@ -11,17 +12,15 @@ import com.powsybl.cgmes.conversion.elements.*;
 import com.powsybl.cgmes.conversion.elements.hvdc.CgmesDcConversion;
 import com.powsybl.cgmes.conversion.elements.transformers.ThreeWindingsTransformerConversion;
 import com.powsybl.cgmes.conversion.elements.transformers.TwoWindingsTransformerConversion;
+import com.powsybl.cgmes.conversion.naming.NamingStrategy;
 import com.powsybl.cgmes.extensions.*;
-import com.powsybl.cgmes.model.CgmesModel;
-import com.powsybl.cgmes.model.CgmesModelException;
-import com.powsybl.cgmes.model.CgmesSubset;
-import com.powsybl.cgmes.model.CgmesTerminal;
+import com.powsybl.cgmes.model.*;
 import com.powsybl.cgmes.model.triplestore.CgmesModelTripleStore;
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.util.Identifiables;
 import com.powsybl.triplestore.api.PropertyBag;
 import com.powsybl.triplestore.api.PropertyBags;
-import org.joda.time.DateTime;
-import org.joda.time.Duration;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -29,12 +28,16 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
+import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import static com.powsybl.cgmes.conversion.Conversion.Config.StateProfile.SSH;
+import static java.util.stream.Collectors.groupingBy;
 
 /**
  * TwoWindingsTransformer Interpretation
@@ -74,8 +77,8 @@ import static com.powsybl.cgmes.conversion.Conversion.Config.StateProfile.SSH;
  * END2. Structural ratio at the network side of legs 1 and 3. RatedU0 = RatedU2 <br>
  * END3. Structural ratio at the network side of legs 1 and 2. RatedU0 = RatedU2 <br>
  * <p>
- * @author Luma Zamarreño <zamarrenolm at aia.es>
- * @author José Antonio Marqués <marquesja at aia.es>
+ * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
+ * @author José Antonio Marqués {@literal <marquesja at aia.es>}
  *
  */
 public class Conversion {
@@ -109,18 +112,22 @@ public class Conversion {
     }
 
     public Conversion(CgmesModel cgmes, Conversion.Config config) {
-        this(cgmes, config, Collections.emptyList());
+        this(cgmes, config, Collections.emptyList(), Collections.emptyList());
     }
 
     public Conversion(CgmesModel cgmes, Conversion.Config config, List<CgmesImportPostProcessor> postProcessors) {
-        this(cgmes, config, postProcessors, NetworkFactory.findDefault());
+        this(cgmes, config, Collections.emptyList(), postProcessors, NetworkFactory.findDefault());
     }
 
-    public Conversion(CgmesModel cgmes, Conversion.Config config, List<CgmesImportPostProcessor> postProcessors,
-                      NetworkFactory networkFactory) {
+    public Conversion(CgmesModel cgmes, Conversion.Config config, List<CgmesImportPreProcessor> preProcessors, List<CgmesImportPostProcessor> postProcessors) {
+        this(cgmes, config, preProcessors, postProcessors, NetworkFactory.findDefault());
+    }
+
+    public Conversion(CgmesModel cgmes, Config config, List<CgmesImportPreProcessor> activatedPreProcessors, List<CgmesImportPostProcessor> activatedPostProcessors, NetworkFactory networkFactory) {
         this.cgmes = Objects.requireNonNull(cgmes);
         this.config = Objects.requireNonNull(config);
-        this.postProcessors = Objects.requireNonNull(postProcessors);
+        this.preProcessors = Objects.requireNonNull(activatedPreProcessors);
+        this.postProcessors = Objects.requireNonNull(activatedPostProcessors);
         this.networkFactory = Objects.requireNonNull(networkFactory);
     }
 
@@ -129,136 +136,257 @@ public class Conversion {
     }
 
     public Network convert() {
+        return convert(ReportNode.NO_OP);
+    }
 
-        if (LOG.isDebugEnabled() && cgmes.baseVoltages() != null) {
-            LOG.debug(cgmes.baseVoltages().tabulate());
-        }
-        // Check that at least we have an EquipmentCore profile
+    public Network convert(ReportNode reportNode) {
+        // Check presence of report node for functional logs and EQ profile in the data source
+        Objects.requireNonNull(reportNode);
         if (!cgmes.hasEquipmentCore()) {
             throw new CgmesModelException("Data source does not contain EquipmentCore data");
         }
-        Network network = createNetwork();
-        Context context = createContext(network);
-        assignNetworkProperties(context);
-        addCgmesSvMetadata(network, context);
-        addCgmesSshMetadata(network, context);
-        addCimCharacteristics(network);
-        if (context.config().createCgmesExportMapping) {
-            CgmesIidmMappingAdder mappingAdder = network.newExtension(CgmesIidmMappingAdder.class);
-            cgmes.topologicalNodes().forEach(tn -> mappingAdder.addTopologicalNode(tn.getId("TopologicalNode"), tn.getId("name"), isBoundaryTopologicalNode(tn.getLocal("graphTP"))));
-            mappingAdder.add();
+
+        // Apply preprocessors, which mainly create missing containers
+        ReportNode preProcessorsNode = CgmesReports.applyingPreprocessorsReport(reportNode);
+        for (CgmesImportPreProcessor preProcessor : preProcessors) {
+            CgmesReports.applyingProcessorReport(preProcessorsNode, preProcessor.getName());
+            preProcessor.process(cgmes);
         }
+        if (LOG.isTraceEnabled() && cgmes.baseVoltages() != null) {
+            LOG.trace("{}{}{}", "BaseVoltages", System.lineSeparator(), cgmes.baseVoltages().tabulate());
+        }
+
+        // Create base network with metadata information
+        Network network = createNetwork();
+        Context context = createContext(network, reportNode);
+        assignNetworkProperties(context);
+        addMetadataModels(network, context);
+        addCimCharacteristics(network);
+
+        // Build mappings
+        context.pushReportNode(CgmesReports.buildingMappingsReport(reportNode));
+        context.nodeContainerMapping().build();
         BaseVoltageMappingAdder bvAdder = network.newExtension(BaseVoltageMappingAdder.class);
         cgmes.baseVoltages().forEach(bv -> bvAdder.addBaseVoltage(bv.getId("BaseVoltage"), bv.asDouble("nominalVoltage"), isBoundaryBaseVoltage(bv.getLocal("graph"))));
         bvAdder.add();
-
-        Function<PropertyBag, AbstractObjectConversion> convf;
-
         cgmes.computedTerminals().forEach(t -> context.terminalMapping().buildTopologicalNodeCgmesTerminalsMapping(t));
         cgmes.regulatingControls().forEach(p -> context.regulatingControlMapping().cacheRegulatingControls(p));
+        context.popReportNode();
 
-        convert(cgmes.substations(), s -> new SubstationConversion(s, context));
-        convert(cgmes.voltageLevels(), vl -> new VoltageLevelConversion(vl, context));
-        PropertyBags nodes = context.nodeBreaker()
-                ? cgmes.connectivityNodes()
-                : cgmes.topologicalNodes();
-        String nodeTypeName = context.nodeBreaker()
-                ? "ConnectivityNode"
-                : "TopologicalNode";
-        convert(nodes, n -> new NodeConversion(nodeTypeName, n, context));
+        // Convert containers
+        convert(cgmes.substations(), CgmesNames.SUBSTATION, context);
+        convert(cgmes.voltageLevels(), CgmesNames.VOLTAGE_LEVEL, context);
+        createFictitiousVoltageLevelsForLineContainers(context);
+
+        // Convert topology
+        PropertyBags nodes = context.nodeBreaker() ? cgmes.connectivityNodes() : cgmes.topologicalNodes();
+        if (context.nodeBreaker()) {
+            convert(nodes, CgmesNames.CONNECTIVITY_NODE, context);
+        } else {
+            convert(nodes, CgmesNames.TOPOLOGICAL_NODE, context);
+        }
         if (!context.config().createBusbarSectionForEveryConnectivityNode()) {
-            convert(cgmes.busBarSections(), bbs -> new BusbarSectionConversion(bbs, context));
+            convert(cgmes.busBarSections(), CgmesNames.BUSBAR_SECTION, context);
         }
 
-        convert(cgmes.energyConsumers(), ec -> new EnergyConsumerConversion(ec, context));
-        convert(cgmes.energySources(), es -> new EnergySourceConversion(es, context));
-        convf = eqi -> new EquivalentInjectionConversion(eqi, context);
-        convert(cgmes.equivalentInjections(), convf);
-        convf = eni -> new ExternalNetworkInjectionConversion(eni, context);
-        convert(cgmes.externalNetworkInjections(), convf);
-        convert(cgmes.shuntCompensators(), sh -> new ShuntConversion(sh, context));
-        convert(cgmes.equivalentShunts(), es -> new EquivalentShuntConversion(es, context));
-        convf = svc -> new StaticVarCompensatorConversion(svc, context);
-        convert(cgmes.staticVarCompensators(), convf);
-        convf = asm -> new AsynchronousMachineConversion(asm, context);
-        convert(cgmes.asynchronousMachines(), convf);
-        convert(cgmes.synchronousMachines(), sm -> new SynchronousMachineConversion(sm, context));
+        // Convert single terminal equipments
+        convert(cgmes.grounds(), CgmesNames.GROUND, context);
+        convert(cgmes.energyConsumers(), CgmesNames.ENERGY_CONSUMER, context);
+        convert(cgmes.energySources(), CgmesNames.ENERGY_SOURCE, context);
+        convert(cgmes.equivalentInjections(), CgmesNames.EQUIVALENT_INJECTION, context);
+        convert(cgmes.externalNetworkInjections(), CgmesNames.EXTERNAL_NETWORK_INJECTION, context);
+        convert(cgmes.shuntCompensators(), CgmesNames.SHUNT_COMPENSATOR, context);
+        convert(cgmes.equivalentShunts(), CgmesNames.EQUIVALENT_SHUNT, context);
+        convert(cgmes.staticVarCompensators(), CgmesNames.STATIC_VAR_COMPENSATOR, context);
+        convert(cgmes.asynchronousMachines(), CgmesNames.ASYNCHRONOUS_MACHINE, context);
+        convert(cgmes.synchronousMachinesAll(), CgmesNames.SYNCHRONOUS_MACHINE, context);
 
+        // Convert multiple terminals equipments
         // We will delay the conversion of some lines/switches that have an end at boundary
         // They have to be processed after all lines/switches have been reviewed
         // FIXME(Luma) store delayedBoundaryNodes in context
         Set<String> delayedBoundaryNodes = new HashSet<>();
         convertSwitches(context, delayedBoundaryNodes);
         convertACLineSegmentsToLines(context, delayedBoundaryNodes);
-
         convertEquivalentBranchesToLines(context, delayedBoundaryNodes);
-        convert(cgmes.seriesCompensators(), sc -> new SeriesCompensatorConversion(sc, context));
-
+        convert(cgmes.seriesCompensators(), CgmesNames.SERIES_COMPENSATOR, context);
         convertTransformers(context, delayedBoundaryNodes);
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(reportNode, "equipments at boundaries"));
         delayedBoundaryNodes.forEach(node -> convertEquipmentAtBoundaryNode(context, node));
+        context.popReportNode();
 
+        // Convert DC equipments, limits, SV injections, control areas, regulating controls
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(reportNode, "DC network"));
         CgmesDcConversion cgmesDcConversion = new CgmesDcConversion(cgmes, context);
         cgmesDcConversion.convert();
+        clearUnattachedHvdcConverterStations(network, context);
+        context.popReportNode();
 
-        convert(cgmes.operationalLimits(), l -> new OperationalLimitConversion(l, context));
+        convert(cgmes.operationalLimits(), CgmesNames.OPERATIONAL_LIMIT, context);
         context.loadingLimitsMapping().addAll();
+        setSelectedOperationalLimitsGroup(context);
 
         if (config.convertSvInjections()) {
-            convert(cgmes.svInjections(), si -> new SvInjectionConversion(si, context));
+            convert(cgmes.svInjections(), CgmesNames.SV_INJECTION, context);
         }
 
-        clearUnattachedHvdcConverterStations(network, context); // in case of faulty CGMES files, remove HVDC Converter Stations without HVDC lines
-        voltageAngles(nodes, context);
-
         if (config.importControlAreas()) {
+            context.pushReportNode(CgmesReports.convertingElementTypeReport(reportNode, CgmesNames.CONTROL_AREA));
             network.newExtension(CgmesControlAreasAdder.class).add();
             CgmesControlAreas cgmesControlAreas = network.getExtension(CgmesControlAreas.class);
             cgmes.controlAreas().forEach(ca -> createControlArea(cgmesControlAreas, ca));
             cgmes.tieFlows().forEach(tf -> addTieFlow(context, cgmesControlAreas, tf));
             cgmesControlAreas.cleanIfEmpty();
+            context.popReportNode();
         }
 
-        // set all regulating controls
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(reportNode, CgmesNames.REGULATING_CONTROL));
         context.regulatingControlMapping().setAllRegulatingControls(network);
-        if (context.config().debugTopology()) {
+        context.popReportNode();
+
+        // Fix dangling lines issues
+        context.pushReportNode(CgmesReports.fixingDanglingLinesIssuesReport(reportNode));
+        handleDangingLineDisconnectedAtBoundary(network, context);
+        adjustMultipleUnpairedDanglingLinesAtSameBoundaryNode(network, context);
+        context.popReportNode();
+
+        // Set voltages and angles
+        context.pushReportNode(CgmesReports.settingVoltagesAndAnglesReport(reportNode));
+        voltageAngles(nodes, context);
+        completeVoltagesAndAngles(network);
+        context.popReportNode();
+
+        // Save/store data for debug or external validation
+        if (config.debugTopology()) {
             debugTopology(context);
         }
-
         if (config.storeCgmesModelAsNetworkExtension()) {
-            // Store a reference to the original CGMES model inside the IIDM network
             network.newExtension(CgmesModelExtensionAdder.class).withModel(cgmes).add();
         }
-
-        // apply post-processors
-        for (CgmesImportPostProcessor postProcessor : postProcessors) {
-            // FIXME generic cgmes models may not have an underlying triplestore
-            // TODO maybe pass the properties to the post processors
-            postProcessor.process(network, cgmes.tripleStore());
-        }
-
-        // Complete Voltages and angles in starBus as properties
-        // Complete Voltages and angles in boundary buses
-        completeVoltagesAndAngles(network);
-
         if (config.storeCgmesConversionContextAsNetworkExtension()) {
-            // Store the terminal mapping in an extension for external validation
             network.newExtension(CgmesConversionContextExtensionAdder.class).withContext(context).add();
         }
 
-        if (config.createCgmesExportMapping) {
-            network.getExtension(CgmesIidmMapping.class).addTopologyListener();
+        ReportNode postProcessorsNode = CgmesReports.applyingPostprocessorsReport(reportNode);
+        for (CgmesImportPostProcessor postProcessor : postProcessors) {
+            // FIXME generic cgmes models may not have an underlying triplestore
+            // TODO maybe pass the properties to the post processors
+            CgmesReports.applyingProcessorReport(postProcessorsNode, postProcessor.getName());
+            postProcessor.process(network, cgmes.tripleStore());
         }
+
+        CgmesReports.importedCgmesNetworkReport(reportNode, network.getId());
         return network;
     }
 
-    private Source isBoundaryTopologicalNode(String graph) {
-        //There are unit tests where the boundary file contains the sequence "TPBD" and others "TP_BD"
-        return graph.contains("TP") && graph.contains("BD")  ? Source.BOUNDARY : Source.IGM;
+    /**
+     * Retrieve the Collection of OperationalLimitGroups for identifiable that have flow limits
+     * (branch, dangling line, 3w-transformer).
+     * If the collection has only one element, it gets to be the identifiable's selectedGroup.
+     * If there is more than one element in the collection, don't set any as selected.
+     * @param context The conversion's Context.
+     */
+    private void setSelectedOperationalLimitsGroup(Context context) {
+        // Set selected limits group for branches
+        context.network().getBranchStream().map(b -> (Branch<?>) b).forEach(branch -> {
+            // Side 1
+            Collection<OperationalLimitsGroup> limitsHolder1 = branch.getOperationalLimitsGroups1();
+            if (limitsHolder1.size() == 1) {
+                branch.setSelectedOperationalLimitsGroup1(limitsHolder1.iterator().next().getId());
+            }
+            // Side 2
+            Collection<OperationalLimitsGroup> limitsHolder2 = branch.getOperationalLimitsGroups2();
+            if (limitsHolder2.size() == 1) {
+                branch.setSelectedOperationalLimitsGroup2(limitsHolder2.iterator().next().getId());
+            }
+        });
+
+        // Set selected limits group for Dangling lines
+        context.network().getDanglingLineStream().forEach(dl -> {
+            Collection<OperationalLimitsGroup> limitsHolder = dl.getOperationalLimitsGroups();
+            if (limitsHolder.size() == 1) {
+                dl.setSelectedOperationalLimitsGroup(limitsHolder.iterator().next().getId());
+            }
+        });
+
+        // Set selected limits group for 3w transformers legs
+        context.network().getThreeWindingsTransformerStream().flatMap(ThreeWindingsTransformer::getLegStream).forEach(leg -> {
+            Collection<OperationalLimitsGroup> limitsHolder = leg.getOperationalLimitsGroups();
+            if (limitsHolder.size() == 1) {
+                leg.setSelectedOperationalLimitsGroup(limitsHolder.iterator().next().getId());
+            }
+        });
+    }
+
+    private void handleDangingLineDisconnectedAtBoundary(Network network, Context context) {
+        if (config.disconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected()) {
+            for (DanglingLine dl : network.getDanglingLines()) {
+                String terminalBoundaryId = dl.getAliasFromType(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + "Terminal_Boundary").orElse(null);
+                if (terminalBoundaryId == null) {
+                    LOG.warn("Dangling line {}: alias for terminal at boundary is missing", dl.getId());
+                } else {
+                    disconnectDanglingLineAtBounddary(dl, terminalBoundaryId, context);
+                }
+            }
+        }
+    }
+
+    private void disconnectDanglingLineAtBounddary(DanglingLine dl, String terminalBoundaryId, Context context) {
+        CgmesTerminal terminalBoundary = cgmes.terminal(terminalBoundaryId);
+        if (terminalBoundary == null) {
+            LOG.warn("Dangling line {}: terminal at boundary with id {} is not found in CGMES model", dl.getId(), terminalBoundaryId);
+        } else {
+            if (!terminalBoundary.connected() && dl.getTerminal().isConnected()) {
+                LOG.warn("DanglingLine {} was connected at network side and disconnected at boundary side. It has been disconnected also at network side.", dl.getId());
+                CgmesReports.danglingLineDisconnectedAtBoundaryHasBeenDisconnectedReport(context.getReportNode(), dl.getId());
+                dl.getTerminal().disconnect();
+            }
+        }
+    }
+
+    private void adjustMultipleUnpairedDanglingLinesAtSameBoundaryNode(Network network, Context context) {
+        network.getDanglingLineStream(DanglingLineFilter.UNPAIRED)
+                .filter(dl -> dl.getTerminal().isConnected())
+                .collect(groupingBy(Conversion::getDanglingLineBoundaryNode))
+                .values().stream()
+                // Only perform adjustment for the groups with more than one connected dangling line
+                .filter(dls -> dls.size() > 1)
+                .forEach(dls -> adjustMultipleUnpairedDanglingLinesAtSameBoundaryNode(dls, context));
+    }
+
+    private void adjustMultipleUnpairedDanglingLinesAtSameBoundaryNode(List<DanglingLine> dls, Context context) {
+        // All dangling lines will have same value for p0, q0. Take it from the first one
+        double p0 = dls.get(0).getP0();
+        double q0 = dls.get(0).getQ0();
+        // Divide this value between all connected dangling lines
+        // This method is called only if there is more than 1 connected dangling line
+        long count = dls.size();
+        final double p0Adjusted = p0 / count;
+        final double q0Adjusted = q0 / count;
+        dls.forEach(dl -> {
+            LOG.warn("Multiple unpaired DanglingLines were connected at the same boundary side. Adjusted original injection from ({}, {}) to ({}, {}) for dangling line {}.", p0, q0, p0Adjusted, q0Adjusted, dl.getId());
+            CgmesReports.multipleUnpairedDanglingLinesAtSameBoundaryReport(context.getReportNode(), dl.getId(), p0, q0, p0Adjusted, q0Adjusted);
+            dl.setP0(p0Adjusted);
+            dl.setQ0(q0Adjusted);
+        });
+    }
+
+    public static String getDanglingLineBoundaryNode(DanglingLine dl) {
+        String node;
+        node = dl.getProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.CONNECTIVITY_NODE_BOUNDARY);
+        if (node == null) {
+            node = dl.getProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.TOPOLOGICAL_NODE_BOUNDARY);
+        }
+        if (node == null) {
+            LOG.warn("Dangling line {} does not have a boundary node identifier.", dl.getId());
+            node = "unknown";
+        }
+        return node;
     }
 
     private Source isBoundaryBaseVoltage(String graph) {
         //There are unit tests where the boundary file contains the sequence "EQBD" and others "EQ_BD"
-        return graph.contains("EQ") && graph.contains("BD")  ? Source.BOUNDARY : Source.IGM;
+        return graph.contains("EQ") && graph.contains("BD") ? Source.BOUNDARY : Source.IGM;
     }
 
     private static void completeVoltagesAndAngles(Network network) {
@@ -268,8 +396,9 @@ public class Conversion {
             .forEach(ThreeWindingsTransformerConversion::calculateVoltageAndAngleInStarBus);
 
         // Voltage and angle in boundary buses
-        network.getDanglingLines()
+        network.getDanglingLineStream(DanglingLineFilter.UNPAIRED)
             .forEach(AbstractConductingEquipmentConversion::calculateVoltageAndAngleInBoundaryBus);
+        network.getTieLines().forEach(tieLine -> AbstractConductingEquipmentConversion.calculateVoltageAndAngleInBoundaryBus(tieLine.getDanglingLine1(), tieLine.getDanglingLine2()));
     }
 
     private static void createControlArea(CgmesControlAreas cgmesControlAreas, PropertyBag ca) {
@@ -279,6 +408,7 @@ public class Conversion {
                 .setName(ca.getLocal("name"))
                 .setEnergyIdentificationCodeEic(ca.getLocal("energyIdentCodeEic"))
                 .setNetInterchange(ca.asDouble("netInterchange", Double.NaN))
+                .setPTolerance(ca.asDouble("pTolerance", Double.NaN))
                 .add();
     }
 
@@ -298,27 +428,39 @@ public class Conversion {
         RegulatingTerminalMapper.mapForTieFlow(terminalId, context).ifPresent(cgmesControlArea::add);
     }
 
-    private void convert(
-            PropertyBags elements,
-            Function<PropertyBag, AbstractObjectConversion> f) {
-        String conversion = null;
-
+    private void convert(PropertyBags elements, String elementType, Context context) {
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(context.getReportNode(), elementType));
         for (PropertyBag element : elements) {
-            if (LOG.isDebugEnabled()) {
-                LOG.debug(element.tabulateLocals());
+            if (LOG.isTraceEnabled()) {
+                LOG.trace(element.tabulateLocals(elementType));
             }
-            AbstractObjectConversion c = f.apply(element);
-            if (conversion == null) {
-                conversion = c.getClass().getName();
-                conversion = conversion.substring(conversion.lastIndexOf('.') + 1);
-                conversion = conversion.replace("Conversion", "");
-            }
+            AbstractObjectConversion c = switch (elementType) {
+                case CgmesNames.SUBSTATION -> new SubstationConversion(element, context);
+                case CgmesNames.VOLTAGE_LEVEL -> new VoltageLevelConversion(element, context);
+                case CgmesNames.CONNECTIVITY_NODE, CgmesNames.TOPOLOGICAL_NODE -> new NodeConversion(elementType, element, context);
+                case CgmesNames.BUSBAR_SECTION -> new BusbarSectionConversion(element, context);
+                case CgmesNames.GROUND -> new GroundConversion(element, context);
+                case CgmesNames.ENERGY_CONSUMER -> new EnergyConsumerConversion(element, context);
+                case CgmesNames.ENERGY_SOURCE -> new EnergySourceConversion(element, context);
+                case CgmesNames.EQUIVALENT_INJECTION -> new EquivalentInjectionConversion(element, context);
+                case CgmesNames.EXTERNAL_NETWORK_INJECTION -> new ExternalNetworkInjectionConversion(element, context);
+                case CgmesNames.SHUNT_COMPENSATOR -> new ShuntConversion(element, context);
+                case CgmesNames.EQUIVALENT_SHUNT -> new EquivalentShuntConversion(element, context);
+                case CgmesNames.STATIC_VAR_COMPENSATOR -> new StaticVarCompensatorConversion(element, context);
+                case CgmesNames.ASYNCHRONOUS_MACHINE -> new AsynchronousMachineConversion(element, context);
+                case CgmesNames.SYNCHRONOUS_MACHINE -> new SynchronousMachineConversion(element, context);
+                case CgmesNames.SERIES_COMPENSATOR -> new SeriesCompensatorConversion(element, context);
+                case CgmesNames.OPERATIONAL_LIMIT -> new OperationalLimitConversion(element, context);
+                case CgmesNames.SV_INJECTION -> new SvInjectionConversion(element, context);
+                default -> throw new IllegalArgumentException("Invalid elementType.");
+            };
             if (c.insideBoundary()) {
                 c.convertInsideBoundary();
             } else if (c.valid()) {
                 c.convert();
             }
         }
+        context.popReportNode();
     }
 
     private Network createNetwork() {
@@ -327,15 +469,9 @@ public class Conversion {
         return networkFactory.createNetwork(networkId, sourceFormat);
     }
 
-    private Context createContext(Network network) {
-        Context context = new Context(cgmes, config, network);
-        context.substationIdMapping().build();
+    private Context createContext(Network network, ReportNode reportNode) {
+        Context context = new Context(cgmes, config, network, reportNode);
         context.dc().initialize();
-        context.loadRatioTapChangers();
-        context.loadPhaseTapChangers();
-        context.loadRatioTapChangerTables();
-        context.loadPhaseTapChangerTables();
-        context.loadReactiveCapabilityCurveData();
         return context;
     }
 
@@ -344,9 +480,23 @@ public class Conversion {
                 context.nodeBreaker()
                         ? NETWORK_PS_CGMES_MODEL_DETAIL_NODE_BREAKER
                         : NETWORK_PS_CGMES_MODEL_DETAIL_BUS_BRANCH);
-        DateTime modelScenarioTime = cgmes.scenarioTime();
-        DateTime modelCreated = cgmes.created();
-        long forecastDistance = new Duration(modelCreated, modelScenarioTime).getStandardMinutes();
+        PropertyBags modelProfiles = context.cgmes().modelProfiles();
+        String fullModel = "FullModel";
+        modelProfiles.sort(Comparator.comparing(p -> p.getId(fullModel)));
+        for (PropertyBag modelProfile : modelProfiles) { // Import of profiles ID as properties TODO import them in a dedicated extension
+            if (modelProfile.getId(fullModel).equals(context.network().getId())) {
+                continue;
+            }
+            String profile = CgmesNamespace.getProfile(modelProfile.getId("profile"));
+            if (profile != null && !"EQ_OP".equals(profile) && !"SV".equals(profile)) { // don't import EQ_OP and SV profiles as they are not used for CGMES export
+                context.network()
+                        .setProperty(Identifiables.getUniqueId(CGMES_PREFIX_ALIAS_PROPERTIES + profile + "_ID", property -> context.network().hasProperty(property)),
+                                modelProfile.getId(fullModel));
+            }
+        }
+        ZonedDateTime modelScenarioTime = cgmes.scenarioTime();
+        ZonedDateTime modelCreated = cgmes.created();
+        long forecastDistance = Duration.between(modelCreated, modelScenarioTime).toMinutes();
         context.network().setForecastDistance(forecastDistance >= 0 ? (int) forecastDistance : 0);
         context.network().setCaseDate(modelScenarioTime);
         LOG.info("cgmes scenarioTime       : {}", modelScenarioTime);
@@ -355,82 +505,90 @@ public class Conversion {
         LOG.info("network forecastDistance : {}", context.network().getForecastDistance());
     }
 
-    private void addCgmesSvMetadata(Network network, Context context) {
-        PropertyBags svDescription = cgmes.fullModel(CgmesSubset.STATE_VARIABLES.getProfile());
-        if (svDescription != null && !svDescription.isEmpty()) {
-            CgmesSvMetadataAdder adder = network.newExtension(CgmesSvMetadataAdder.class)
-                    .setDescription(svDescription.get(0).get("description"))
-                    .setSvVersion(readVersion(svDescription, context))
-                    .setModelingAuthoritySet(svDescription.get(0).get("modelingAuthoritySet"));
-            svDescription.pluckLocals("DependentOn").forEach(adder::addDependency);
-            adder.add();
+    /**
+     * Read the model header (the FullModel node) that holds metadata information.
+     * The metadata will be stored in the {@link CgmesMetadataModels} extension.
+     * @param network The network described by the model header and that will hold the extension.
+     * @param context The conversion context.
+     */
+    private void addMetadataModels(Network network, Context context) {
+        PropertyBags ps = cgmes.fullModels();
+        if (ps.isEmpty()) {
+            return;
+        }
+        CgmesMetadataModelsAdder modelsAdder = network.newExtension(CgmesMetadataModelsAdder.class);
+        for (PropertyBag p : ps) {
+            CgmesMetadataModelsAdder.ModelAdder modelAdder = modelsAdder.newModel()
+                .setId(p.getId("FullModel"))
+                .setSubset(subsetFromGraph(p.getLocal("graph")))
+                .setDescription(p.getId("description"))
+                .setVersion(readVersion(p, context))
+                .setModelingAuthoritySet(p.getId("modelingAuthoritySet"));
+            addMetadataModelReferences(p, "profileList", modelAdder::addProfile);
+            addMetadataModelReferences(p, "dependentOnList", modelAdder::addDependentOn);
+            addMetadataModelReferences(p, "supersedesList", modelAdder::addSupersedes);
+            modelAdder.add();
+        }
+        modelsAdder.add();
+    }
+
+    /**
+     * Add references (profiles, dependencies, supersedes) to the {@link CgmesMetadataModel} being created by the adder.
+     * @param p The property bag holding the references.
+     * @param refsProperty The property name to look for in the property bag.
+     *                     The property value must be split to retrieve the complete list of references.
+     * @param adder The method in the adder that will add the references to the model.
+     */
+    private void addMetadataModelReferences(PropertyBag p, String refsProperty, Function<String, CgmesMetadataModelsAdder.ModelAdder> adder) {
+        String refs = p.get(refsProperty);
+        if (refs != null && !refs.isEmpty()) {
+            for (String ref : refs.split(" ")) {
+                adder.apply(ref);
+            }
         }
     }
 
-    private void addCgmesSshMetadata(Network network, Context context) {
-        PropertyBags sshDescription = cgmes.fullModel(CgmesSubset.STEADY_STATE_HYPOTHESIS.getProfile());
-        if (sshDescription != null && !sshDescription.isEmpty()) {
-            CgmesSshMetadataAdder adder = network.newExtension(CgmesSshMetadataAdder.class)
-                    .setDescription(sshDescription.get(0).get("description"))
-                    .setSshVersion(readVersion(sshDescription, context))
-                    .setModelingAuthoritySet(sshDescription.get(0).get("modelingAuthoritySet"));
-            sshDescription.pluckLocals("DependentOn").forEach(adder::addDependency);
-            adder.add();
-        }
+    /**
+     * Retrieve the subset from the graph.
+     * @param graph The file name. It shall contain the subset identifier.
+     * @return The {@link CgmesSubset} corresponding to the graph.
+     */
+    private CgmesSubset subsetFromGraph(String graph) {
+        return Stream.of(CgmesSubset.values())
+                .filter(subset -> subset.isValidName(graph))
+                .findFirst()
+                .orElse(CgmesSubset.UNKNOWN);
     }
 
-    private int readVersion(PropertyBags propertyBags, Context context) {
+    /**
+     * Retrieve the version number from the property bag.
+     * @param propertyBag The bag where to look for a version property.
+     * @param context The conversion context.
+     * @return The version number if found and is a proper integer, else the default value: 1.
+     */
+    private int readVersion(PropertyBag propertyBag, Context context) {
         try {
-            return propertyBags.get(0).asInt("version");
+            return propertyBag.asInt("version");
         } catch (NumberFormatException e) {
-            context.fixed("Version", "The version is expected to be an integer: " + propertyBags.get(0).get("version") + ". Fixed to 1");
+            context.fixed("Version", "The version is expected to be an integer: " + propertyBag.get("version") + ". Fixed to 1");
             return 1;
         }
     }
 
     private void addCimCharacteristics(Network network) {
-        if (cgmes instanceof CgmesModelTripleStore) {
+        if (cgmes instanceof CgmesModelTripleStore cgmesModelTripleStore) {
             network.newExtension(CimCharacteristicsAdder.class)
                     .setTopologyKind(cgmes.isNodeBreaker() ? CgmesTopologyKind.NODE_BREAKER : CgmesTopologyKind.BUS_BRANCH)
-                    .setCimVersion(((CgmesModelTripleStore) cgmes).getCimVersion())
+                    .setCimVersion(cgmesModelTripleStore.getCimVersion())
                     .add();
         }
     }
 
-    private void putVoltageLevelRefByLineContainerIdIfPresent(String lineContainerId, Supplier<String> terminalId1,
-                                                              Supplier<String> terminalId2,
-                                                              Map<String, VoltageLevel> nominalVoltageByLineContainerId,
-                                                              Context context) {
-        String vlId = Optional.ofNullable(context.namingStrategy().getIidmId("VoltageLevel",
-                        context.cgmes().voltageLevel(cgmes.terminal(terminalId1.get()), context.nodeBreaker())))
-                .orElseGet(() -> context.namingStrategy().getIidmId("VoltageLevel",
-                        context.cgmes().voltageLevel(cgmes.terminal(terminalId2.get()), context.nodeBreaker())));
-        if (vlId != null) {
-            VoltageLevel vl = context.network().getVoltageLevel(vlId);
-            if (vl != null) {
-                nominalVoltageByLineContainerId.put(lineContainerId, vl);
-            }
-        }
-    }
-
     private void convertACLineSegmentsToLines(Context context, Set<String> delayedBoundaryNodes) {
-        Map<String, VoltageLevel> voltageLevelRefByLineContainerId = new HashMap<>();
-        PropertyBags acLineSegments = cgmes.acLineSegments();
-        for (PropertyBag line : acLineSegments) { // Retrieve a voltage level reference for every line container of AC Line Segments outside boundaries
-            String lineContainerId = line.getId("Line");
-            if (lineContainerId != null && !voltageLevelRefByLineContainerId.containsKey(lineContainerId)) {
-                putVoltageLevelRefByLineContainerIdIfPresent(lineContainerId, () -> line.getId("Terminal1"), () -> line.getId("Terminal2"),
-                        voltageLevelRefByLineContainerId, context);
-            }
-        }
-        for (PropertyBag line : acLineSegments) {
-            if (LOG.isDebugEnabled()) {
-                LOG.debug(line.tabulateLocals("ACLineSegment"));
-            }
-            String lineContainerId = line.getId("Line");
-            if (lineContainerId != null) { // Create fictitious voltage levels for AC line segments inside line containers outside boundaries
-                VoltageLevel vlRef = voltageLevelRefByLineContainerId.get(lineContainerId);
-                createLineContainerFictitiousVoltageLevels(context, lineContainerId, vlRef, line);
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(context.getReportNode(), CgmesNames.AC_LINE_SEGMENT));
+        for (PropertyBag line : cgmes.acLineSegments()) {
+            if (LOG.isTraceEnabled()) {
+                LOG.trace(line.tabulateLocals(CgmesNames.AC_LINE_SEGMENT));
             }
             ACLineSegmentConversion c = new ACLineSegmentConversion(line, context);
             if (c.valid()) {
@@ -443,52 +601,29 @@ public class Conversion {
                 }
             }
         }
+        context.popReportNode();
     }
 
-    static class LineContainerFictitiousVoltageLevelData {
-        String lineId;
+    // Fictitious voltageLevels for Line and Substation(when it includes nodes) containers
+    private void createFictitiousVoltageLevelsForLineContainers(Context context) {
 
-        String lineName;
-        String nodeId;
-        VoltageLevel vl;
+        context.nodeContainerMapping().getFictitiousVoltageLevelsForLineContainersToBeCreated().forEach(fictitiousVoltageLevelId -> {
+            String containerId = context.nodeContainerMapping().getContainerId(fictitiousVoltageLevelId).orElseThrow();
+            String containerName = context.nodeContainerMapping().getContainerName(fictitiousVoltageLevelId).orElseThrow();
+            String referenceVoltageLevelId = context.nodeContainerMapping().getReferenceVoltageLevelId(fictitiousVoltageLevelId).orElseThrow();
 
-        String idForFictitiousVoltageLevel() {
-            return nodeId + "_VL";
-        }
+            if (context.network().getVoltageLevel(fictitiousVoltageLevelId) == null) {
+                VoltageLevel referenceVoltageLevel = context.network().getVoltageLevel(referenceVoltageLevelId);
+                if (referenceVoltageLevel == null) {
+                    throw new ConversionException("VoltageLevel not found for voltageLevelId: " + referenceVoltageLevelId);
+                }
+                createFictitiousVoltageLevelsForLineContainer(context, fictitiousVoltageLevelId, containerId, containerName, referenceVoltageLevel);
+            }
+        });
     }
 
-    private LineContainerFictitiousVoltageLevelData voltageLevelDataForACLSinLineContainer(Context context, String lineId, PropertyBag lineSegment, String terminalRef) {
-        LineContainerFictitiousVoltageLevelData vldata = new LineContainerFictitiousVoltageLevelData();
-        vldata.lineId = lineId;
-        vldata.lineName = lineSegment.get("lineName");
-        CgmesTerminal t = cgmes.terminal(lineSegment.getId(terminalRef));
-        vldata.nodeId = context.nodeBreaker() ? t.connectivityNode() : t.topologicalNode();
-        String vlId = context.namingStrategy().getIidmId("VoltageLevel", context.cgmes().voltageLevel(t, context.nodeBreaker()));
-        if (vlId != null) {
-            vldata.vl = context.network().getVoltageLevel(vlId);
-        } else {
-            vldata.vl = context.network().getVoltageLevel(vldata.idForFictitiousVoltageLevel());
-        }
-        return vldata;
-    }
-
-    private void createLineContainerFictitiousVoltageLevels(Context context, String lineId, VoltageLevel vlRef, PropertyBag lineSegment) {
-        // Try to obtain data for a potential fictitious voltage level from Terminal1 of AC Line Segment
-        LineContainerFictitiousVoltageLevelData vldata1 = voltageLevelDataForACLSinLineContainer(context, lineId, lineSegment, "Terminal1");
-        // The same, from Terminal2 of AC Line Segment
-        LineContainerFictitiousVoltageLevelData vldata2 = voltageLevelDataForACLSinLineContainer(context, lineId, lineSegment, "Terminal2");
-        // Only create a fictitious voltage levels replacing cim:Line Container if we are NOT at boundaries
-        if (vldata1.vl == null && !context.boundary().containsNode(vldata1.nodeId)) {
-            createLineContainerFictitiousVoltageLevel(context, vldata1, vlRef);
-        }
-        if (vldata2.vl == null && !context.boundary().containsNode(vldata2.nodeId)) {
-            createLineContainerFictitiousVoltageLevel(context, vldata2, vlRef);
-        }
-    }
-
-    private void createLineContainerFictitiousVoltageLevel(Context context, LineContainerFictitiousVoltageLevelData vldata, VoltageLevel vlref) {
-        String id = vldata.idForFictitiousVoltageLevel();
-        LOG.warn("Fictitious Voltage Level {} created for Line container {} node {}", id, vldata.lineId, vldata.lineName);
+    private void createFictitiousVoltageLevelsForLineContainer(Context context, String fictitiousVoltageLevelId, String containerId, String containerName, VoltageLevel vlref) {
+        LOG.warn("Fictitious Voltage Level {} created for Line container {} name {}", fictitiousVoltageLevelId, containerId, containerName);
         // Nominal voltage and low/high limits are copied from the reference voltage level, if it is given
         VoltageLevel vl = context.network().newVoltageLevel()
                 .setNominalV(vlref.getNominalV())
@@ -498,17 +633,19 @@ public class Conversion {
                                 : TopologyKind.BUS_BREAKER)
                 .setLowVoltageLimit(vlref.getLowVoltageLimit())
                 .setHighVoltageLimit(vlref.getHighVoltageLimit())
-                .setId(id)
-                .setName(vldata.lineName)
+                .setId(fictitiousVoltageLevelId)
+                .setFictitious(true)
+                .setName(containerName)
                 .setEnsureIdUnicity(context.config().isEnsureIdAliasUnicity())
                 .add();
-        vl.setProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + "LineContainerId", vldata.lineId);
+        vl.setProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + "LineContainerId", containerId);
     }
 
     private void convertSwitches(Context context, Set<String> delayedBoundaryNodes) {
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(context.getReportNode(), CgmesNames.SWITCH));
         for (PropertyBag sw : cgmes.switches()) {
-            if (LOG.isDebugEnabled()) {
-                LOG.debug(sw.tabulateLocals("Switch"));
+            if (LOG.isTraceEnabled()) {
+                LOG.trace(sw.tabulateLocals("Switch"));
             }
             SwitchConversion c = new SwitchConversion(sw, context);
             if (c.valid()) {
@@ -521,12 +658,14 @@ public class Conversion {
                 }
             }
         }
+        context.popReportNode();
     }
 
     private void convertEquivalentBranchesToLines(Context context, Set<String> delayedBoundaryNodes) {
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(context.getReportNode(), CgmesNames.EQUIVALENT_BRANCH));
         for (PropertyBag equivalentBranch : cgmes.equivalentBranches()) {
-            if (LOG.isDebugEnabled()) {
-                LOG.debug(equivalentBranch.tabulateLocals("EquivalentBranch"));
+            if (LOG.isTraceEnabled()) {
+                LOG.trace(equivalentBranch.tabulateLocals("EquivalentBranch"));
             }
             EquivalentBranchConversion c = new EquivalentBranchConversion(equivalentBranch, context);
             if (c.valid()) {
@@ -539,24 +678,30 @@ public class Conversion {
                 }
             }
         }
+        context.popReportNode();
     }
 
     private void convertTransformers(Context context, Set<String> delayedBoundaryNodes) {
-        cgmes.groupedTransformerEnds().forEach((t, ends) -> {
-            if (LOG.isDebugEnabled()) {
-                LOG.debug("Transformer {}, {}-winding", t, ends.size());
-                ends.forEach(e -> LOG.debug(e.tabulateLocals("TransformerEnd")));
-            }
-            if (ends.size() == 2) {
-                convertTwoWindingsTransformers(context, ends, delayedBoundaryNodes);
-            } else if (ends.size() == 3) {
-                convertThreeWindingsTransformers(context, ends);
-            } else {
-                String what = "PowerTransformer " + t;
-                Supplier<String> reason = () -> String.format("Has %d ends. Only 2 or 3 ends are supported", ends.size());
-                context.invalid(what, reason);
-            }
-        });
+        context.pushReportNode(CgmesReports.convertingElementTypeReport(context.getReportNode(), CgmesNames.POWER_TRANSFORMER));
+        cgmes.transformers().stream()
+                .map(t -> context.transformerEnds(t.getId("PowerTransformer")))
+                .forEach(ends -> {
+                    String transformerId = ends.get(0).getId("PowerTransformer");
+                    if (LOG.isTraceEnabled()) {
+                        LOG.trace("Transformer {}, {}-winding", transformerId, ends.size());
+                        ends.forEach(e -> LOG.trace(e.tabulateLocals("TransformerEnd")));
+                    }
+                    if (ends.size() == 2) {
+                        convertTwoWindingsTransformers(context, ends, delayedBoundaryNodes);
+                    } else if (ends.size() == 3) {
+                        convertThreeWindingsTransformers(context, ends);
+                    } else {
+                        String what = "PowerTransformer " + transformerId;
+                        Supplier<String> reason = () -> String.format("Has %d ends. Only 2 or 3 ends are supported", ends.size());
+                        context.invalid(what, reason);
+                    }
+                });
+        context.popReportNode();
     }
 
     private static void convertTwoWindingsTransformers(Context context, PropertyBags ends, Set<String> delayedBoundaryNodes) {
@@ -603,31 +748,58 @@ public class Conversion {
             // In some TYNDP there are three acLineSegments at the boundary node,
             // one of them disconnected. The two connected acLineSegments are imported.
             List<BoundaryEquipment> connectedBeqs = beqs.stream()
-                .filter(beq -> !beq.isAcLineSegmentDisconnected(context)).collect(Collectors.toList());
+                .filter(beq -> !beq.isAcLineSegmentDisconnected(context)).toList();
             if (connectedBeqs.size() == 2) {
                 convertTwoEquipmentsAtBoundaryNode(context, node, connectedBeqs.get(0), connectedBeqs.get(1));
-                // Log ignored AcLineSegments
-                beqs.stream().filter(beq -> !connectedBeqs.contains(beq)).collect(Collectors.toList())
-                    .forEach(beq -> context.ignored("convertEquipmentAtBoundaryNode",
-                        String.format("Multiple AcLineSegments at boundary %s. Disconnected AcLineSegment %s is ignored", node, beq.getAcLineSegmentId())));
+                // There can be multiple disconnected ACLineSegment to the same X-node (for example, for planning purposes)
+                beqs.stream().filter(beq -> !connectedBeqs.contains(beq)).toList()
+                    .forEach(beq -> {
+                        context.fixed("convertEquipmentAtBoundaryNode",
+                                String.format("Multiple AcLineSegments at boundary %s. Disconnected AcLineSegment %s is imported as a dangling line.", node, beq.getAcLineSegmentId()));
+                        beq.createConversion(context).convertAtBoundary();
+                    });
             } else {
-                context.invalid(node, "Too many equipment at boundary node");
+                // This case should not happen and will not result in an equivalent network at the end of the conversion
+                context.fixed(node, "More than two connected AcLineSegments at boundary: only dangling lines are created." +
+                        " Please note that the converted IIDM network will probably not be equivalent to the CGMES network.");
+                beqs.forEach(beq -> beq.createConversion(context).convertAtBoundary());
             }
         }
     }
 
     private static void convertTwoEquipmentsAtBoundaryNode(Context context, String node, BoundaryEquipment beq1, BoundaryEquipment beq2) {
-        BoundaryLine boundaryLine1 = beq1.createConversion(context).asBoundaryLine(node);
-        BoundaryLine boundaryLine2 = beq2.createConversion(context).asBoundaryLine(node);
-        if (boundaryLine1 != null && boundaryLine2 != null) {
-            if (boundaryLine2.getId().compareTo(boundaryLine1.getId()) >= 0) {
-                ACLineSegmentConversion.convertBoundaryLines(context, node, boundaryLine1, boundaryLine2);
+        EquipmentAtBoundaryConversion conversion1 = beq1.createConversion(context);
+        EquipmentAtBoundaryConversion conversion2 = beq2.createConversion(context);
+
+        conversion1.convertAtBoundary();
+        Optional<DanglingLine> dl1 = conversion1.getDanglingLine();
+        conversion2.convertAtBoundary();
+        Optional<DanglingLine> dl2 = conversion2.getDanglingLine();
+
+        if (dl1.isPresent() && dl2.isPresent()) {
+            // there can be several dangling lines linked to same x-node in one IGM for planning purposes
+            // in this case, we don't merge them
+            // please note that only one of them should be connected
+            String regionName1 = obtainRegionName(dl1.get().getTerminal().getVoltageLevel());
+            String regionName2 = obtainRegionName(dl2.get().getTerminal().getVoltageLevel());
+
+            String pairingKey1 = dl1.get().getPairingKey();
+            String pairingKey2 = dl2.get().getPairingKey();
+
+            if (!(pairingKey1 != null && pairingKey1.equals(pairingKey2))) {
+                context.ignored(node, "Both dangling lines do not have the same pairingKey: we do not consider them as a merged line");
+            } else if (regionName1 != null && regionName1.equals(regionName2)) {
+                context.ignored(node, "Both dangling lines are in the same voltage level: we do not consider them as a merged line");
+            } else if (dl2.get().getId().compareTo(dl1.get().getId()) >= 0) {
+                ACLineSegmentConversion.convertToTieLine(context, dl1.get(), dl2.get());
             } else {
-                ACLineSegmentConversion.convertBoundaryLines(context, node, boundaryLine2, boundaryLine1);
+                ACLineSegmentConversion.convertToTieLine(context, dl2.get(), dl1.get());
             }
-        } else {
-            context.invalid(node, "Unexpected boundaryLine");
         }
+    }
+
+    private static String obtainRegionName(VoltageLevel voltageLevel) {
+        return voltageLevel.getSubstation().map(s -> s.getProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + "regionName")).orElse(null);
     }
 
     private void voltageAngles(PropertyBags nodes, Context context) {
@@ -636,7 +808,7 @@ public class Conversion {
             // In node-breaker conversion,
             // set (voltage, angle) values after all nodes have been created and connected
             for (PropertyBag n : nodes) {
-                NodeConversion nc = new NodeConversion("ConnectivityNode", n, context);
+                NodeConversion nc = new NodeConversion(CgmesNames.CONNECTIVITY_NODE, n, context);
                 if (!nc.insideBoundary() || nc.insideBoundary() && context.config().convertBoundary()) {
                     nc.setVoltageAngleNodeBreaker();
                 }
@@ -645,11 +817,14 @@ public class Conversion {
     }
 
     private void clearUnattachedHvdcConverterStations(Network network, Context context) {
+        // In case of faulty CGMES files, remove HVDC Converter Stations without HVDC lines
         network.getHvdcConverterStationStream()
                 .filter(converter -> converter.getHvdcLine() == null)
-                .peek(converter -> context.ignored("HVDC Converter Station " + converter.getId(), "No correct linked HVDC line found."))
-                .collect(Collectors.toList())
-                .forEach(Connectable::remove);
+                .forEach(converter -> {
+                    CgmesReports.removingUnattachedHvdcConverterStationReport(context.getReportNode(), converter.getId());
+                    context.ignored("HVDC Converter Station " + converter.getId(), "No correct linked HVDC line found.");
+                    converter.remove();
+                });
     }
 
     private void debugTopology(Context context) {
@@ -680,25 +855,13 @@ public class Conversion {
             return false;
         }
 
-        public boolean allowUnsupportedTapChangers() {
-            return allowUnsupportedTapChangers;
+        public boolean importNodeBreakerAsBusBreaker() {
+            return importNodeBreakerAsBusBreaker;
         }
 
-        public Config setAllowUnsupportedTapChangers(boolean allowUnsupportedTapChangers) {
-            this.allowUnsupportedTapChangers = allowUnsupportedTapChangers;
+        public Config setImportNodeBreakerAsBusBreaker(boolean importNodeBreakerAsBusBreaker) {
+            this.importNodeBreakerAsBusBreaker = importNodeBreakerAsBusBreaker;
             return this;
-        }
-
-        public boolean useNodeBreaker() {
-            return true;
-        }
-
-        public double lowImpedanceLineR() {
-            return lowImpedanceLineR;
-        }
-
-        public double lowImpedanceLineX() {
-            return lowImpedanceLineX;
         }
 
         public boolean convertBoundary() {
@@ -707,15 +870,6 @@ public class Conversion {
 
         public Config setConvertBoundary(boolean convertBoundary) {
             this.convertBoundary = convertBoundary;
-            return this;
-        }
-
-        public boolean changeSignForShuntReactivePowerFlowInitialState() {
-            return changeSignForShuntReactivePowerFlowInitialState;
-        }
-
-        public Config setChangeSignForShuntReactivePowerFlowInitialState(boolean b) {
-            changeSignForShuntReactivePowerFlowInitialState = b;
             return this;
         }
 
@@ -732,15 +886,6 @@ public class Conversion {
             return this;
         }
 
-        public boolean createCgmesExportMapping() {
-            return createCgmesExportMapping;
-        }
-
-        public Config setCreateCgmesExportMapping(boolean createCgmesExportMapping) {
-            this.createCgmesExportMapping = createCgmesExportMapping;
-            return this;
-        }
-
         public boolean convertSvInjections() {
             return convertSvInjections;
         }
@@ -750,18 +895,16 @@ public class Conversion {
             return this;
         }
 
-        public StateProfile  getProfileForInitialValuesShuntSectionsTapPositions() {
+        public StateProfile getProfileForInitialValuesShuntSectionsTapPositions() {
             return profileForInitialValuesShuntSectionsTapPositions;
         }
 
         public Config setProfileForInitialValuesShuntSectionsTapPositions(String profileForInitialValuesShuntSectionsTapPositions) {
-            switch (Objects.requireNonNull(profileForInitialValuesShuntSectionsTapPositions)) {
-                case "SSH":
-                case "SV":
-                    this.profileForInitialValuesShuntSectionsTapPositions = StateProfile.valueOf(profileForInitialValuesShuntSectionsTapPositions);
-                    break;
-                default:
-                    throw new CgmesModelException("Unexpected profile used for shunt sections / tap positions state hypothesis: " + profileForInitialValuesShuntSectionsTapPositions);
+            String forInitialValuesShuntSectionsTapPositions = Objects.requireNonNull(profileForInitialValuesShuntSectionsTapPositions);
+            if (forInitialValuesShuntSectionsTapPositions.equals("SSH") || forInitialValuesShuntSectionsTapPositions.equals("SV")) {
+                this.profileForInitialValuesShuntSectionsTapPositions = StateProfile.valueOf(profileForInitialValuesShuntSectionsTapPositions);
+            } else {
+                throw new CgmesModelException("Unexpected profile used for shunt sections / tap positions state hypothesis: " + profileForInitialValuesShuntSectionsTapPositions);
             }
             return this;
         }
@@ -781,6 +924,15 @@ public class Conversion {
 
         public Config setStoreCgmesConversionContextAsNetworkExtension(boolean storeCgmesTerminalMappingAsNetworkExtension) {
             this.storeCgmesConversionContextAsNetworkExtension = storeCgmesTerminalMappingAsNetworkExtension;
+            return this;
+        }
+
+        public boolean createActivePowerControlExtension() {
+            return createActivePowerControlExtension;
+        }
+
+        public Config setCreateActivePowerControlExtension(boolean createActivePowerControlExtension) {
+            this.createActivePowerControlExtension = createActivePowerControlExtension;
             return this;
         }
 
@@ -859,22 +1011,60 @@ public class Conversion {
             xfmr3StructuralRatio = alternative;
         }
 
-        private boolean allowUnsupportedTapChangers = true;
+        public double getMissingPermanentLimitPercentage() {
+            return missingPermanentLimitPercentage;
+        }
+
+        public Config setMissingPermanentLimitPercentage(double missingPermanentLimitPercentage) {
+            if (missingPermanentLimitPercentage < 0 || missingPermanentLimitPercentage > 100) {
+                throw new IllegalArgumentException("Missing permanent limit percentage must be between 0 and 100.");
+            }
+            this.missingPermanentLimitPercentage = missingPermanentLimitPercentage;
+            return this;
+        }
+
+        public CgmesImport.FictitiousSwitchesCreationMode getCreateFictitiousSwitchesForDisconnectedTerminalsMode() {
+            return createFictitiousSwitchesForDisconnectedTerminalsMode;
+        }
+
+        public Config createFictitiousSwitchesForDisconnectedTerminalsMode(CgmesImport.FictitiousSwitchesCreationMode createFictitiousSwitchesForDisconnectedTerminalsMode) {
+            this.createFictitiousSwitchesForDisconnectedTerminalsMode = createFictitiousSwitchesForDisconnectedTerminalsMode;
+            return this;
+        }
+
+        public Config setDisconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected(boolean b) {
+            disconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected = b;
+            return this;
+        }
+
+        public boolean disconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected() {
+            return disconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected;
+        }
+
+        public boolean getCreateFictitiousVoltageLevelsForEveryNode() {
+            return createFictitiousVoltageLevelsForEveryNode;
+        }
+
+        public Config setCreateFictitiousVoltageLevelsForEveryNode(boolean b) {
+            createFictitiousVoltageLevelsForEveryNode = b;
+            return this;
+        }
+
         private boolean convertBoundary = false;
-        private boolean changeSignForShuntReactivePowerFlowInitialState = false;
-        private double lowImpedanceLineR = 7.0E-5;
-        private double lowImpedanceLineX = 7.0E-5;
 
         private boolean createBusbarSectionForEveryConnectivityNode = false;
         private boolean convertSvInjections = true;
         private StateProfile profileForInitialValuesShuntSectionsTapPositions = SSH;
         private boolean storeCgmesModelAsNetworkExtension = true;
         private boolean storeCgmesConversionContextAsNetworkExtension = false;
+        private boolean createActivePowerControlExtension = false;
+
+        private CgmesImport.FictitiousSwitchesCreationMode createFictitiousSwitchesForDisconnectedTerminalsMode = CgmesImport.FictitiousSwitchesCreationMode.ALWAYS;
 
         private boolean ensureIdAliasUnicity = false;
         private boolean importControlAreas = true;
-
-        private boolean createCgmesExportMapping = false;
+        private boolean importNodeBreakerAsBusBreaker = false;
+        private boolean disconnectNetworkSideOfDanglingLinesIfBoundaryIsDisconnected = true;
 
         private NamingStrategy namingStrategy = new NamingStrategy.Identity();
 
@@ -887,11 +1077,14 @@ public class Conversion {
         private Xfmr3ShuntInterpretationAlternative xfmr3Shunt = Xfmr3ShuntInterpretationAlternative.NETWORK_SIDE;
         private Xfmr3StructuralRatioInterpretationAlternative xfmr3StructuralRatio = Xfmr3StructuralRatioInterpretationAlternative.STAR_BUS_SIDE;
 
+        private double missingPermanentLimitPercentage = 100;
+        private boolean createFictitiousVoltageLevelsForEveryNode = true;
     }
 
     private final CgmesModel cgmes;
     private final Config config;
     private final List<CgmesImportPostProcessor> postProcessors;
+    private final List<CgmesImportPreProcessor> preProcessors;
     private final NetworkFactory networkFactory;
 
     private static final Logger LOG = LoggerFactory.getLogger(Conversion.class);
@@ -902,4 +1095,15 @@ public class Conversion {
 
     public static final String CGMES_PREFIX_ALIAS_PROPERTIES = "CGMES.";
     public static final String PROPERTY_IS_CREATED_FOR_DISCONNECTED_TERMINAL = CGMES_PREFIX_ALIAS_PROPERTIES + "isCreatedForDisconnectedTerminal";
+    public static final String PROPERTY_IS_EQUIVALENT_SHUNT = CGMES_PREFIX_ALIAS_PROPERTIES + "isEquivalentShunt";
+    public static final String PROPERTY_HYDRO_PLANT_STORAGE_TYPE = CGMES_PREFIX_ALIAS_PROPERTIES + "hydroPlantStorageKind";
+    public static final String PROPERTY_FOSSIL_FUEL_TYPE = CGMES_PREFIX_ALIAS_PROPERTIES + "fuelType";
+    public static final String PROPERTY_WIND_GEN_UNIT_TYPE = CGMES_PREFIX_ALIAS_PROPERTIES + "windGenUnitType";
+    public static final String PROPERTY_CGMES_ORIGINAL_CLASS = CGMES_PREFIX_ALIAS_PROPERTIES + "originalClass";
+    public static final String PROPERTY_BUSBAR_SECTION_TERMINALS = CGMES_PREFIX_ALIAS_PROPERTIES + "busbarSectionTerminals";
+    public static final String PROPERTY_CGMES_GOVERNOR_SCD = CGMES_PREFIX_ALIAS_PROPERTIES + "governorSCD";
+    public static final String PROPERTY_CGMES_SYNCHRONOUS_MACHINE_TYPE = CGMES_PREFIX_ALIAS_PROPERTIES + "synchronousMachineType";
+    public static final String PROPERTY_CGMES_SYNCHRONOUS_MACHINE_OPERATING_MODE = CGMES_PREFIX_ALIAS_PROPERTIES + "synchronousMachineOperatingMode";
+    public static final String PROPERTY_OPERATIONAL_LIMIT_SET_IDENTIFIERS = CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.OPERATIONAL_LIMIT_SET + "_identifiers";
+    public static final String PROPERTY_REGULATING_CONTROL = CGMES_PREFIX_ALIAS_PROPERTIES + CgmesNames.REGULATING_CONTROL;
 }
