@@ -3,29 +3,29 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.powerfactory.model;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
-public class StudyCaseTest extends AbstractPowerFactoryTest {
+class StudyCaseTest extends AbstractPowerFactoryTest {
 
     private StudyCase studyCase;
 
-    @Before
+    @BeforeEach
     public void setUp() throws IOException {
         super.setUp();
         var studyTime = Instant.parse("2021-10-30T09:35:25Z");
@@ -33,7 +33,7 @@ public class StudyCaseTest extends AbstractPowerFactoryTest {
     }
 
     @Test
-    public void test() {
+    void test() {
         assertEquals("test", studyCase.getName());
         Instant studyTime = Instant.parse("2021-10-30T09:35:25Z");
         assertEquals(studyTime, studyCase.getTime());
@@ -42,7 +42,7 @@ public class StudyCaseTest extends AbstractPowerFactoryTest {
     }
 
     @Test
-    public void jsonTest() throws IOException {
+    void jsonTest() throws IOException {
         var studyCase2 = roundTripTest(studyCase, StudyCase::writeJson, StudyCase::readJson, "/studyCase.json");
         assertEquals("test", studyCase2.getName());
         Instant studyTime = Instant.parse("2021-10-30T09:35:25Z");
@@ -53,12 +53,12 @@ public class StudyCaseTest extends AbstractPowerFactoryTest {
         assertEquals(List.of(1.3f, 2.3f, 3.5f), objFoo.getFloatVectorAttributeValue("fv"));
         assertEquals(List.of(4L, 5L, 6943953495493593L), objFoo.getLongVectorAttributeValue("lv"));
         assertEquals(List.of(1.3949d, 2.34d, 3.1223d), objFoo.getDoubleVectorAttributeValue("dv"));
-        assertEquals(List.of(3L), objFoo.getObjectVectorAttributeValue("ov").stream().map(DataObjectRef::getId).collect(Collectors.toList()));
+        assertEquals(List.of(3L), objFoo.getObjectVectorAttributeValue("ov").stream().map(DataObjectRef::getId).toList());
         assertEquals(List.of("AA", "BBB"), objFoo.getStringVectorAttributeValue("sv"));
     }
 
     @Test
-    public void loaderTest() {
+    void loaderTest() {
         var loader = new JsonStudyCaseLoader();
         assertEquals(StudyCase.class, loader.getDataClass());
         assertEquals("json", loader.getExtension());
