@@ -3,42 +3,45 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.psse.converter;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.ByteStreams;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.datasource.DataSource;
 import com.powsybl.commons.datasource.ReadOnlyDataSource;
-import com.powsybl.iidm.import_.Importer;
-import com.powsybl.iidm.network.*;
+import com.powsybl.commons.parameters.ConfiguredParameter;
+import com.powsybl.commons.parameters.Parameter;
+import com.powsybl.commons.parameters.ParameterDefaultValueConfig;
+import com.powsybl.commons.parameters.ParameterType;
+import com.powsybl.iidm.network.Importer;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.NetworkFactory;
+import com.powsybl.iidm.network.Substation;
+import com.powsybl.iidm.network.VoltageLevel;
 import com.powsybl.iidm.network.util.ContainersMapping;
-import com.powsybl.iidm.parameters.Parameter;
-import com.powsybl.iidm.parameters.ParameterDefaultValueConfig;
-import com.powsybl.iidm.parameters.ParameterType;
 import com.powsybl.psse.converter.extensions.PsseConversionContextExtensionAdder;
 import com.powsybl.psse.converter.extensions.PsseModelExtensionAdder;
-import com.powsybl.psse.model.*;
+import com.powsybl.psse.model.PsseException;
+import com.powsybl.psse.model.PsseVersion;
 import com.powsybl.psse.model.io.Context;
 import com.powsybl.psse.model.pf.*;
 import com.powsybl.psse.model.pf.io.PowerFlowDataFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.UncheckedIOException;
 import java.util.*;
-import java.util.function.Predicate;
-import java.util.function.ToDoubleFunction;
-import java.util.function.ToIntFunction;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
- * @author JB Heyberger <jean-baptiste.heyberger at rte-france.com>
+ * @author JB Heyberger {@literal <jean-baptiste.heyberger at rte-france.com>}
  */
 @AutoService(Importer.class)
 public class PsseImporter implements Importer {
@@ -53,6 +56,10 @@ public class PsseImporter implements Importer {
             ParameterType.BOOLEAN,
             "Ignore base voltage specified in the file",
             Boolean.FALSE);
+    private static final Parameter IGNORE_NODE_BREAKER_TOPOLOGY_PARAMETER = new Parameter("psse.import.ignore-node-breaker-topology",
+            ParameterType.BOOLEAN,
+            "Ignore the node breaker topology specified in the substation data of the file",
+            Boolean.FALSE);
 
     @Override
     public String getFormat() {
@@ -60,8 +67,16 @@ public class PsseImporter implements Importer {
     }
 
     @Override
+    public List<String> getSupportedExtensions() {
+        return Arrays.asList(EXTENSIONS);
+    }
+
+    @Override
     public List<Parameter> getParameters() {
-        return Collections.singletonList(IGNORE_BASE_VOLTAGE_PARAMETER);
+        List<Parameter> parameterList = List.of(
+                IGNORE_BASE_VOLTAGE_PARAMETER,
+                IGNORE_NODE_BREAKER_TOPOLOGY_PARAMETER);
+        return ConfiguredParameter.load(parameterList, getFormat(), ParameterDefaultValueConfig.INSTANCE);
     }
 
     @Override
@@ -81,7 +96,7 @@ public class PsseImporter implements Importer {
 
     private String findExtension(ReadOnlyDataSource dataSource) throws IOException {
         for (String ext : EXTENSIONS) {
-            if (dataSource.exists(null, ext)) {
+            if (dataSource.isDataExtension(ext) && dataSource.exists(null, ext)) {
                 return ext;
             }
         }
@@ -136,6 +151,7 @@ public class PsseImporter implements Importer {
             PssePowerFlowModel pssePowerFlowModel = PowerFlowDataFactory.create(ext, version).read(dataSource, ext, context);
             pssePowerFlowModel.getCaseIdentification().validate();
 
+            new PsseFixes(pssePowerFlowModel, context.getVersion()).fix();
             PsseValidation psseValidation = new PsseValidation(pssePowerFlowModel, context.getVersion());
             if (!psseValidation.isValidCase()) {
                 throw new PsseException("The PSS/E file is not a valid case");
@@ -159,113 +175,128 @@ public class PsseImporter implements Importer {
         // set date and time
         // TODO
 
-        // build container to fit IIDM requirements
-        // build container to fit IIDM requirements
-        ContainersMapping containersMapping = defineContainersMappging(psseModel);
-
         boolean ignoreBaseVoltage = Parameter.readBoolean(FORMAT, parameters, IGNORE_BASE_VOLTAGE_PARAMETER,
+                ParameterDefaultValueConfig.INSTANCE);
+        boolean ignoreNodeBreakerTopology = Parameter.readBoolean(FORMAT, parameters, IGNORE_NODE_BREAKER_TOPOLOGY_PARAMETER,
                 ParameterDefaultValueConfig.INSTANCE);
         PerUnitContext perUnitContext = new PerUnitContext(psseModel.getCaseIdentification().getSbase(), ignoreBaseVoltage);
 
         // The map gives access to PsseBus object with the int bus Number
-        Map<Integer, PsseBus> busNumToPsseBus = new HashMap<>();
+        Map<Integer, PsseBus> busNumToPsseBus = psseModel.getBuses().stream().collect(Collectors.toMap(PsseBus::getI, Function.identity()));
+
+        // Necessary data for validating nodeBreaker topology
+        NodeBreakerValidation nodeBreakerValidation = new NodeBreakerValidation(ignoreNodeBreakerTopology);
+        nodeBreakerValidation.fill(psseModel, version);
+
+        // build container to fit IIDM requirements
+        ContainersMapping containersMapping = defineContainersMapping(psseModel, busNumToPsseBus, perUnitContext, nodeBreakerValidation);
 
         // create buses
-        createBuses(psseModel, containersMapping, perUnitContext, network, busNumToPsseBus);
+        NodeBreakerImport nodeBreakerImport = createBuses(psseModel, containersMapping, perUnitContext, network, nodeBreakerValidation);
 
         // Create loads
         for (PsseLoad psseLoad : psseModel.getLoads()) {
-            new LoadConverter(psseLoad, containersMapping, network).create();
+            new LoadConverter(psseLoad, containersMapping, network, nodeBreakerImport).create();
         }
 
         // Create fixed shunts
         for (PsseFixedShunt psseShunt : psseModel.getFixedShunts()) {
-            new FixedShuntCompensatorConverter(psseShunt, containersMapping, network).create();
+            new FixedShuntCompensatorConverter(psseShunt, containersMapping, network, nodeBreakerImport).create();
         }
 
         // Create switched shunts
         for (PsseSwitchedShunt psseSwShunt : psseModel.getSwitchedShunts()) {
-            new SwitchedShuntCompensatorConverter(psseSwShunt, containersMapping, network, version).create();
+            new SwitchedShuntCompensatorConverter(psseSwShunt, containersMapping, network, version, nodeBreakerImport).create();
         }
 
         for (PsseGenerator psseGen : psseModel.getGenerators()) {
-            new GeneratorConverter(psseGen, containersMapping, network).create();
+            new GeneratorConverter(psseGen, containersMapping, network, nodeBreakerImport).create();
         }
 
         for (PsseNonTransformerBranch psseLine : psseModel.getNonTransformerBranches()) {
-            new LineConverter(psseLine, containersMapping, perUnitContext, network, version).create();
+            new LineConverter(psseLine, containersMapping, perUnitContext, network, version, nodeBreakerImport).create();
         }
 
         for (PsseTransformer psseTfo : psseModel.getTransformers()) {
-            new TransformerConverter(psseTfo, containersMapping, perUnitContext, network, busNumToPsseBus, psseModel.getCaseIdentification().getSbase(), version).create();
+            new TransformerConverter(psseTfo, containersMapping, perUnitContext, network, busNumToPsseBus, psseModel.getCaseIdentification().getSbase(), version, nodeBreakerImport).create();
         }
 
         for (PsseTwoTerminalDcTransmissionLine psseTwoTerminaDc : psseModel.getTwoTerminalDcTransmissionLines()) {
-            new TwoTerminalDcConverter(psseTwoTerminaDc, containersMapping, network).create();
+            new TwoTerminalDcConverter(psseTwoTerminaDc, containersMapping, network, nodeBreakerImport).create();
         }
 
         // Attach a slack bus
-        new SlackConverter(psseModel.getBuses(), containersMapping, network).create();
+        new SlackConverter(psseModel.getBuses(), containersMapping, network, nodeBreakerImport).create();
 
         // Add controls
         for (PsseSwitchedShunt psseSwShunt : psseModel.getSwitchedShunts()) {
-            new SwitchedShuntCompensatorConverter(psseSwShunt, containersMapping, network, version).addControl();
+            new SwitchedShuntCompensatorConverter(psseSwShunt, containersMapping, network, version, nodeBreakerImport).addControl();
         }
         for (PsseGenerator psseGen : psseModel.getGenerators()) {
-            new GeneratorConverter(psseGen, containersMapping, network).addControl(busNumToPsseBus.get(psseGen.getI()));
+            new GeneratorConverter(psseGen, containersMapping, network, nodeBreakerImport).addControl(busNumToPsseBus.get(psseGen.getI()));
         }
         for (PsseTransformer psseTransformer : psseModel.getTransformers()) {
-            new TransformerConverter(psseTransformer, containersMapping, perUnitContext, network, busNumToPsseBus, psseModel.getCaseIdentification().getSbase(), version).addControl();
+            new TransformerConverter(psseTransformer, containersMapping, perUnitContext, network, busNumToPsseBus, psseModel.getCaseIdentification().getSbase(), version, nodeBreakerImport).addControl();
         }
 
         return network;
     }
 
-    private ContainersMapping defineContainersMappging(PssePowerFlowModel psseModel) {
-        List<Object> branches = ImmutableList.builder()
-            .addAll(psseModel.getNonTransformerBranches())
-            .addAll(psseModel.getTransformers())
-            .build();
+    private ContainersMapping defineContainersMapping(PssePowerFlowModel psseModel, Map<Integer, PsseBus> busNumToPsseBus, PerUnitContext perUnitContext, NodeBreakerValidation nodeBreakerValidation) {
+        List<Edge> edges = new ArrayList<>();
+        // only zeroImpedance Lines are necessary and they are not allowed, so nothing to do
 
-        ToIntFunction<Object> branchToNum1 = branch -> branch instanceof PsseNonTransformerBranch ? ((PsseNonTransformerBranch) branch).getI() : ((PsseTransformer) branch).getI();
-        ToIntFunction<Object> branchToNum2 = branch -> branch instanceof PsseNonTransformerBranch ? ((PsseNonTransformerBranch) branch).getJ() : ((PsseTransformer) branch).getJ();
-        ToIntFunction<Object> branchToNum3 = branch -> branch instanceof PsseNonTransformerBranch ? 0 : ((PsseTransformer) branch).getK();
-        ToDoubleFunction<Object> branchToResistance = branch -> branch instanceof PsseNonTransformerBranch ? ((PsseNonTransformerBranch) branch).getR() : ((PsseTransformer) branch).getR12();
-        ToDoubleFunction<Object> branchToReactance = branch -> branch instanceof PsseNonTransformerBranch ? ((PsseNonTransformerBranch) branch).getX() : ((PsseTransformer) branch).getX12();
-        Predicate<Object> branchToIsTransformer = branch -> branch instanceof PsseTransformer;
+        psseModel.getTransformers().forEach(t -> {
+            if (t.getK() == 0) { // twoWindingsTransformers with zero impedance are not allowed
+                edges.add(new Edge(t.getI(), t.getJ(), true, false));
+            } else { // threeWindingsTransformers with zero impedance are not allowed
+                edges.add(new Edge(t.getI(), t.getJ(), true, false));
+                edges.add(new Edge(t.getI(), t.getK(), true, false));
+            }
+        });
 
-        return ContainersMapping.create(psseModel.getBuses(), branches, PsseBus::getI, branchToNum1,
-            branchToNum2, branchToNum3, branchToResistance, branchToReactance, branchToIsTransformer,
-            busNums -> "VL" + busNums.iterator().next(), substationNum -> "S" + substationNum++);
+        return ContainersMapping.create(psseModel.getBuses(), edges,
+                PsseBus::getI,
+                Edge::bus1,
+                Edge::bus2,
+                Edge::zeroImpedance,
+                Edge::transformer,
+                busNumber -> getNominalVFromBusNumber(busNumToPsseBus, busNumber, perUnitContext),
+                busNumber -> getPsseSubstationId(nodeBreakerValidation, busNumber),
+                AbstractConverter::getVoltageLevelId,
+                substationNums -> "S" + substationNums.stream().sorted().findFirst().orElseThrow(() -> new PsseException("Unexpected empty substationNums")));
     }
 
-    private static void createBuses(PssePowerFlowModel psseModel, ContainersMapping containersMapping,
-        PerUnitContext perUnitContext, Network network, Map<Integer, PsseBus> busNumToPsseBus) {
+    private double getNominalVFromBusNumber(Map<Integer, PsseBus> busNumToPsseBus, int busNumber, PerUnitContext perUnitContext) {
+        if (!busNumToPsseBus.containsKey(busNumber)) { // never should happen
+            throw new PsseException("busId without PsseBus" + busNumber);
+        }
+        return VoltageLevelConverter.getNominalV(busNumToPsseBus.get(busNumber), perUnitContext.ignoreBaseVoltage());
+    }
+
+    private int getPsseSubstationId(NodeBreakerValidation nodeBreakerValidation, int busNumber) {
+        return nodeBreakerValidation.getSubstationIfOnlyOneExists(busNumber).map(psseSubstation -> psseSubstation.getRecord().getIs()).orElse(0);
+    }
+
+    private static NodeBreakerImport createBuses(PssePowerFlowModel psseModel, ContainersMapping containersMapping,
+                                                 PerUnitContext perUnitContext, Network network,
+                                                 NodeBreakerValidation nodeBreakerValidation) {
+
+        NodeBreakerImport nodeBreakerImport = new NodeBreakerImport();
+
         for (PsseBus psseBus : psseModel.getBuses()) {
 
             Substation substation = new SubstationConverter(psseBus, containersMapping, network).create();
-            VoltageLevel voltageLevel = new VoltageLevelConverter(psseBus, containersMapping, perUnitContext, network).create(substation);
-            new BusConverter(psseBus, containersMapping, network).create(voltageLevel);
-
-            busNumToPsseBus.put(psseBus.getI(), psseBus);
+            VoltageLevel voltageLevel = new VoltageLevelConverter(psseBus, containersMapping, perUnitContext, network, nodeBreakerValidation, nodeBreakerImport).create(substation);
+            new BusConverter(psseBus, containersMapping, network, nodeBreakerImport).create(voltageLevel);
         }
+
+        return nodeBreakerImport;
     }
 
-    static class PerUnitContext {
-        private final double sb;
-        private final boolean ignoreBaseVoltage;
+    private record Edge(int bus1, int bus2, boolean transformer, boolean zeroImpedance) {
+    }
 
-        PerUnitContext(double sb, boolean ignoreBaseVoltage) {
-            this.sb = sb;
-            this.ignoreBaseVoltage = ignoreBaseVoltage;
-        }
-
-        double getSb() {
-            return sb;
-        }
-
-        boolean isIgnoreBaseVoltage() {
-            return ignoreBaseVoltage;
-        }
+    record PerUnitContext(double sb, boolean ignoreBaseVoltage) {
     }
 }
