@@ -3,17 +3,22 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.timeseries;
 
 import com.google.common.base.Stopwatch;
-
 import gnu.trove.list.array.TIntArrayList;
 import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.StringWriter;
+import java.io.UncheckedIOException;
+import java.io.Writer;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -21,7 +26,11 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
@@ -29,6 +38,9 @@ import java.util.function.IntFunction;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.zip.GZIPOutputStream;
+
+import static com.powsybl.timeseries.TimeSeries.writeInstantToMicroString;
+import static com.powsybl.timeseries.TimeSeries.writeInstantToNanoString;
 
 /**
  * Utility class to load time series into a table and then:
@@ -48,13 +60,13 @@ import java.util.zip.GZIPOutputStream;
  *     <li>Concurrency between data loading and other operations (CSV writing, statistics computation) is NOT supported</li>
  * </ul>
  *
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 public class TimeSeriesTable {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(TimeSeriesTable.class);
 
-    public class Correlation {
+    public static class Correlation {
 
         private final String timeSeriesName1;
         private final String timeSeriesName2;
@@ -85,7 +97,7 @@ public class TimeSeriesTable {
         }
     }
 
-    private class TimeSeriesNameMap {
+    private static class TimeSeriesNameMap {
 
         private final BiList<String> names = new BiList<>();
 
@@ -118,9 +130,9 @@ public class TimeSeriesTable {
         }
     }
 
-    private int fromVersion;
+    private final int fromVersion;
 
-    private int toVersion;
+    private final int toVersion;
 
     private List<TimeSeriesMetadata> timeSeriesMetadata;
 
@@ -182,14 +194,14 @@ public class TimeSeriesTable {
 
             for (DoubleTimeSeries timeSeries : doubleTimeSeries.stream()
                                                                .sorted(Comparator.comparing(ts -> ts.getMetadata().getName()))
-                                                               .collect(Collectors.toList())) {
+                                                               .toList()) {
                 timeSeriesMetadata.add(timeSeries.getMetadata());
                 int i = doubleTimeSeriesNames.add(timeSeries.getMetadata().getName());
                 timeSeriesIndexDoubleOrString.add(i);
             }
             for (StringTimeSeries timeSeries : stringTimeSeries.stream()
                                                                .sorted(Comparator.comparing(ts -> ts.getMetadata().getName()))
-                                                               .collect(Collectors.toList())) {
+                                                               .toList()) {
                 timeSeriesMetadata.add(timeSeries.getMetadata());
                 int i = stringTimeSeriesNames.add(timeSeries.getMetadata().getName());
                 timeSeriesIndexDoubleOrString.add(i);
@@ -253,7 +265,7 @@ public class TimeSeriesTable {
     }
 
     private long getTimeSeriesOffset(int version, int timeSeriesNum) {
-        return (long) timeSeriesNum * tableIndex.getPointCount() * (toVersion - fromVersion + 1) + (version - fromVersion) * tableIndex.getPointCount();
+        return (long) timeSeriesNum * tableIndex.getPointCount() * (toVersion - fromVersion + 1) + (long) (version - fromVersion) * tableIndex.getPointCount();
     }
 
     private int getStatisticsIndex(int version, int timeSeriesNum) {
@@ -319,12 +331,12 @@ public class TimeSeriesTable {
         List<StringTimeSeries> stringTimeSeries = new ArrayList<>();
         for (TimeSeries timeSeries : timeSeriesList) {
             Objects.requireNonNull(timeSeries);
-            if (timeSeries instanceof DoubleTimeSeries) {
-                doubleTimeSeries.add((DoubleTimeSeries) timeSeries);
-            } else if (timeSeries instanceof StringTimeSeries) {
-                stringTimeSeries.add((StringTimeSeries) timeSeries);
+            if (timeSeries instanceof DoubleTimeSeries dts) {
+                doubleTimeSeries.add(dts);
+            } else if (timeSeries instanceof StringTimeSeries sts) {
+                stringTimeSeries.add(sts);
             } else {
-                throw new AssertionError("Unsupported time series type " + timeSeries.getClass());
+                throw new IllegalStateException("Unsupported time series type " + timeSeries.getClass());
             }
         }
 
@@ -605,7 +617,7 @@ public class TimeSeriesTable {
                     cache.stringCache[cachedPoint * stringTimeSeriesNames.size() + timeSeriesNum] = stringBuffer.getString(timeSeriesOffset + point + cachedPoint);
                 }
             } else {
-                throw new AssertionError("Unexpected data type " + metadata.getDataType());
+                throw new IllegalStateException("Unexpected data type " + metadata.getDataType());
             }
         }
     }
@@ -640,7 +652,7 @@ public class TimeSeriesTable {
                     String value = cache.stringCache[cachedPoint * stringTimeSeriesNames.size() + timeSeriesNum];
                     writeString(writer, value);
                 } else {
-                    throw new AssertionError("Unexpected data type " + metadata.getDataType());
+                    throw new IllegalStateException("Unexpected data type " + metadata.getDataType());
                 }
             }
             writer.write(System.lineSeparator());
@@ -648,20 +660,14 @@ public class TimeSeriesTable {
     }
 
     private void writeTime(Writer writer, TimeSeriesCsvConfig timeSeriesCsvConfig, int point, int cachedPoint) throws IOException {
-        long time = tableIndex.getTimeAt(point + cachedPoint);
+        Instant instant = tableIndex.getInstantAt(point + cachedPoint);
         switch (timeSeriesCsvConfig.timeFormat()) {
-            case DATE_TIME:
-                ZonedDateTime dateTime = ZonedDateTime.ofInstant(Instant.ofEpochMilli(time), ZoneId.systemDefault());
-                writer.write(dateTime.format(timeSeriesCsvConfig.dateTimeFormatter()));
-                break;
-            case FRACTIONS_OF_SECOND:
-                writer.write(Double.toString(time / 1000.0));
-                break;
-            case MILLIS:
-                writer.write(Long.toString(time));
-                break;
-            default:
-                throw new AssertionError("Unknown time format " + timeSeriesCsvConfig.timeFormat());
+            case DATE_TIME -> writer.write(ZonedDateTime.ofInstant(instant, ZoneId.systemDefault()).format(timeSeriesCsvConfig.dateTimeFormatter()));
+            case FRACTIONS_OF_SECOND -> writer.write(Double.toString(instant.getEpochSecond() + instant.getNano() / 1e9));
+            case MILLIS -> writer.write(Long.toString(instant.toEpochMilli()));
+            case MICROS -> writer.write(writeInstantToMicroString(instant));
+            case NANOS -> writer.write(writeInstantToNanoString(instant));
+            default -> throw new IllegalStateException("Unknown time format " + timeSeriesCsvConfig.timeFormat());
         }
     }
 
